--- a/server.cfg
+++ b/server.cfg
@@ -42,4 +42,4 @@ sv_maxclients 1000
 
 # (https://keymaster.fivem.net)
 sv_licenseKey "cfxk_10GFu8Dtqx1MPoMXx84Or_AxUQK"
-set steam_webApiKey "0FC4606F99F34D08507268F766F32AEC"
+set steam_webApiKey "none"
